Альтер миграции
